# TradePulse

./: .env.cloud  Cargo.toml  docker-compose.yml
aggregator-service/: Cargo.toml
aggregator-service/src/: main.rs
alert-service/: Cargo.toml
alert-service/src/: main.rs
cli-subscriber/: Cargo.toml
cli-subscriber/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: kafka.rs  lib.rs
ingest-service/: Cargo.toml
ingest-service/src/: main.rs
