[package]
name = "aggregator-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tradepulse-common = { path = "../crates/common" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdkafka = { version = "0.36.2", features = ["cmake-build", "ssl", "sasl"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
